# cloudflare-admin

./: Cargo.toml  LICENSE  README.md  build-macos-app.sh
.github/workflows/: build-on-push.yml  release.yml
assets/icon/apple/icon.icon/: icon.json
assets/macOS/Cloudflare Admin.app/Contents/: Info.plist
assets/macOS/Cloudflare Admin.app/Contents/Resources/: cloudflare-admin.icns
src/: cloudflare.rs  main.rs  storage.rs
src/ui/: dashboard.rs  dns_list.rs  mod.rs  record_editor.rs  settings.rs  token_setup.rs
