[package]
name = "cloudflare-admin"
version = "0.1.0"
edition = "2024"

[profile.release]
codegen-units = 1
lto = true
panic = "abort"
strip = true

[dependencies]
gpui = { version = "0.2", features = ["runtime_shaders"] }
gpui-component = "0.5"
gpui-component-assets = "0.5"
keyring = { version = "3", features = ["apple-native", "windows-native", "sync-secret-service"] }

# Cloudflare API
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Async runtime
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
anyhow = "1"

# Force core-text to use 21.0.0 which uses core-graphics 0.24 (same as zed-font-kit)
core-text = "=21.0.0"
